# steam-workshop-bundler

./: .gitignore  Cargo.toml  README.md
.devcontainer/: create.sh  devcontainer.json
example/: README.md
example/GameSDK/Scripts/mods/: NewProject.lua
example/Workshop/NewProject/: LICENSE  MANIFEST  config.xml
src/: config.rs  lib.rs  main.rs
